# pocketscout-mcp

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
src/pocketscout_mcp/: __init__.py  __main__.py  models.py  server.py
src/pocketscout_mcp/clients/: alphafold.py  base.py  chembl.py  pdb.py  pubmed.py  uniprot.py
tests/: test_clients.py
tests/fixtures/: alphafold_P00533.json  alphafold_P01116.json  chembl_P00533_activities.json  chembl_P00533_mechanisms.json  chembl_P00533_target.json  pdb_1M17_binding_sites.json  pdb_1M17_entry.json  pdb_1M17_nonpolymer.json  pdb_6OIM_entry.json  pdb_6OIM_nonpolymer.json  pdb_search_P00533.json  pubmed_EGFR.json  uniprot_P01116.json
