[project]
name = "pocketscout-mcp"
version = "0.1.0"
description = "Scout the binding landscape before you design the binder. An MCP server for drug target binding site intelligence."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Paul Mangiamele", email = "paul@propriouslabs.com"}
]
keywords = ["mcp", "drug-discovery", "binding-sites", "protein", "bioinformatics", "alphafold"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "gemmi>=0.7",
]

[project.scripts]
pocketscout-mcp = "pocketscout_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.urls]
Homepage = "https://github.com/pmangiamele/pocketscout-mcp"
Issues = "https://github.com/pmangiamele/pocketscout-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pocketscout_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
